# advent-of-code

./: CMakeLists.txt
2015/01/: Solution  Solution.hi  Solution.hs  solution01.cpp
2015/02/: solution02.cpp
2015/03/: solution03.cpp
2015/04/: solution05.cpp
public_include/2015/01/: solution01.hpp
public_include/2015/02/: solution02.hpp
public_include/2015/03/: solution03.hpp
public_include/2024/01/: solution01.hpp
public_include/2024/02/: solution02.hpp
src/: main.cpp
src/2015/01/: solution01.cpp
src/2015/02/: solution02.cpp
src/2015/03/: solution03.cpp
src/2024/01/: solution01.cpp
src/2024/02/: solution02.cpp
